styling fixes with bootstrap

--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,40 @@
                 </form>
         </div>
     </nav>
-    <div>Contact</div>
-
+    <div class="margin" style="margin: 10vh">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2 class="text-primary">Contact</h2>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Full Name</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
