--- a/index.html
+++ b/index.html
@@ -41,16 +41,24 @@
                 <h2 class="text-primary">About me!</h2>
             </div>
         </div>
+        <hr>
         <div class="row">
             <div class="col-sm-3">
                 <img src="assets/images/paris.jpg" alt="me and girlfirend in paris" class="about" style="width: 170px"
                     height="200px">
             </div>
-            <div class="col-sm-9">My name is Ivan Rouskov. I was born in Sofia Bulgaria, but lived most of my life in Washington state. I am currently studying to be a web / software developer. My favorite activities are Skiing and ballroom dancing. I was a dance instructor for 4 years and a competitor for 8. I also grew up downhill ski racing for 10 years, my home mountain being Alpental and Snoqualmie pass. Recently I have began training in Muay Thai and Jujitsu. Other than my hobbies I enjoy music, any genre but I am geared mostly to electronic. I also enjoy DJing in my spare time and creating music. My soundcloud has some mixes and songs I have made, as well as a lot of music I enjoy listening to. <a href="https://soundcloud.com/ivancho277" class="soundcloud">Link to my soundcloud</a>
-            
+            <div class="col-sm-9">My name is Ivan Rouskov. I was born in Sofia Bulgaria, but lived most of my life in
+                Washington state. I am currently studying to be a web / software developer. My favorite activities are
+                Skiing and ballroom dancing. I was a dance instructor for 4 years and a competitor for 8. I also grew
+                up downhill ski racing for 10 years, my home mountain being Alpental and Snoqualmie pass. Recently I
+                have began training in Muay Thai and Jujitsu. Other than my hobbies I enjoy music, any genre but I am
+                geared mostly to electronic. I also enjoy DJing in my spare time and creating music. My soundcloud has
+                some mixes and songs I have made, as well as a lot of music I enjoy listening to. <a href="https://soundcloud.com/ivancho277"
+                    class="soundcloud">Link to my soundcloud</a>
+
+            </div>
         </div>
     </div>
-    
 
 
 
