--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,15 @@
         </div>
     </nav>
 
-    <div class="margin" style="margin: 10vh"></div>
-    <div class="container>
-        <div class=" row">
-            <div class="col-sm-8">
-                <h2 class="text-primary">Portfolio</h2>
+    <div class="margin" style="margin: 10vh">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2 class="text-primary">Portfolio</h2>
+                </div>
             </div>
         </div>
+        <hr>
         <div class="row">
             <div class="col-sm">col-sm </div>
             <div class="col-sm">col-sm</div>
