last page left to fully complete is portfolio

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
 
-    <div class="margin" style="margin: 10vh">
+    <div class="margin" style="margin: 10vh; background-color: rgb(118, 113, 121);">
         <div class="container>
         <div class=" row">
             <div class="col-sm-8">
@@ -44,8 +44,10 @@
         <hr>
         <div class="row">
             <div class="col-sm-3">
-                <img src="assets/images/paris.jpg" alt="me and girlfirend in paris" class="about" style="width: 170px"
-                    height="200px">
+                <img src="assets/images/paris.jpg" alt="me and girlfirend in paris" class="about"      style="width: 200px;
+                    height: 230px;
+                    padding: 20px;"
+                    />
             </div>
             <div class="col-sm-9">My name is Ivan Rouskov. I was born in Sofia Bulgaria, but lived most of my life in
                 Washington state. I am currently studying to be a web / software developer. My favorite activities are
