--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 </form>
         </div>
     </nav>
-    <div class="margin" style="margin: 10vh">
+    <div class="margin" style="margin: 10vh; background-color: rgb(118, 113, 121);">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
