--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
 
-    <div class="margin" style="margin: 10vh; background-color: rgb(118, 113, 121);">
+    <div class="margin" style="margin: 5vh; background-color: rgb(118, 113, 121);">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
@@ -42,10 +42,38 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-sm">col-sm </div>
-            <div class="col-sm">col-sm</div>
-            <div class="col-sm">col-sm</div>
+
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 1</p>
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px">
+            </div>
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 2</p>
+
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            </div>
+
         </div>
+        <div class="row">
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 3 </p>
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            </div>
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 4</p>
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            </div>
+
+        </div>
+        <div class="row">
+
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 5</p> 
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            </div>
+            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 6</p>
+                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            </div>
+           
+
+        </div>
+
+    </div>
     </div>
 
 </body>
