everything works except have to fix footer to stay at bottom of page

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,14 @@
         </div>
     </div>
 
+    <div class="footer navbar-fixed-bottom bg-dark footer">
+            <!-- Copyright -->
+            <div class="container text-center">
+                <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
+            </div>
+            <!-- Copyright -->
+        </div>
+
 
 
 
