--- a/portfolio.html
+++ b/portfolio.html
@@ -43,39 +43,89 @@
         <hr>
         <div class="row">
 
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 1</p>
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 1</p>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 2</p>
-
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 2</p>
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </div>
         <div class="row">
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 3 </p>
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 3</p>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 4</p>
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177)">Link Item 4</p>
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </div>
         <div class="row">
 
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 5</p> 
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 5</p>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6"><p style="background-color:blanchedalmond">Item 6</p>
-                <img src="assets/images/deadlink.jpg" alt="deadlink" style="width: 150px; height:200px; padding: 5px;">
+            <div class="col-sm-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <div class="card-body">
+                        <a href="#">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 6</p>
+                        </a>
+                    </div>
+                </div>
             </div>
-           
+
 
         </div>
 
     </div>
     </div>
 
+    <!-- Footer -->
+<div class="footer navbar-fixed-bottom bg-dark footer">
+        <!-- Copyright -->
+        <div class="container text-center">
+            <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
+        </div>
+        <!-- Copyright -->
+    </div>
+    <!-- Footer -->
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
