--- a/index.html
+++ b/index.html
@@ -2,83 +2,84 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Ivan Rouskov</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                </form>
-        </div>
-    </nav>
-
-
-    <div class="margin" style="margin: 5vh; background-color: rgb(118, 113, 121);">
-        <div class="container>
-        <div class=" row">
-            <div class="col-sm-8">
-                <h2 class="text-primary">About me!</h2>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-sm-3">
-                <img src="assets/images/paris.jpg" alt="me and girlfirend in paris" class="about"      style="width: 200px;
-                    height: 230px;
-                    padding: 20px;"
-                    />
-            </div>
-            <div class="col-sm-9">My name is Ivan Rouskov. I was born in Sofia Bulgaria, but lived most of my life in
-                Washington state. I am currently studying to be a web / software developer. My favorite activities are
-                Skiing and ballroom dancing. I was a dance instructor for 4 years and a competitor for 8. I also grew
-                up downhill ski racing for 10 years, my home mountain being Alpental and Snoqualmie pass. Recently I
-                have began training in Muay Thai and Jujitsu. Other than my hobbies I enjoy music, any genre but I am
-                geared mostly to electronic. I also enjoy DJing in my spare time and creating music. My soundcloud has
-                some mixes and songs I have made, as well as a lot of music I enjoy listening to. <a href="https://soundcloud.com/ivancho277"
-                    class="soundcloud">Link to my soundcloud</a>
-
-            </div>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Ivan Rouskov</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        </form>
     </div>
+  </nav>
 
-    <div class="footer navbar-fixed-bottom bg-dark footer">
-            <!-- Copyright -->
-            <div class="container text-center">
-                <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
-            </div>
-            <!-- Copyright -->
-        </div>
+
+  <div class="margin" style="margin: 5vh; background-color: rgb(118, 113, 121);">
+    <div class="container">
+        <div class="row">
+      <div class="col-sm-8">
+        <h2 class="text-primary">About me!</h2>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-sm-3">
+        <img src="assets/images/paris.jpg" alt="me and girlfirend in paris" class="about" style="width: 200px;
+                    height: 230px;
+                    padding: 20px;" />
+      </div>
+      <div class="col-sm-9">My name is Ivan Rouskov. I was born in Sofia Bulgaria, but lived most of my life in
+        Washington state. I am currently studying to be a web / software developer. My favorite activities are
+        Skiing and ballroom dancing. I was a dance instructor for 4 years and a competitor for 8. I also grew
+        up downhill ski racing for 10 years, my home mountain being Alpental and Snoqualmie pass. Recently I
+        have began training in Muay Thai and Jujitsu. Other than my hobbies I enjoy music, any genre but I am
+        geared mostly to electronic. I also enjoy DJing in my spare time and creating music. My soundcloud has
+        some mixes and songs I have made, as well as a lot of music I enjoy listening to. <a href="https://soundcloud.com/ivancho277"
+          class="soundcloud" style="background-color:white;">Link to my soundcloud</a>
+
+      </div>
+      
+    </div>
+  </div>
+
+
+  <div class="navbar navbar-fixed-bottom bg-dark footer">
+    <!-- Copyright -->
+    <div class="container text-center">
+      <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
+    </div>
+    <!-- Copyright -->
+  </div>
 
 
 
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script>
 
 </html>
