--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 
 
-  <div class="navbar navbar-fixed-bottom bg-dark footer">
+  <div class="navbar navbar-fixed-bottom bg-dark footer" style="position: fixed; bottom: 0; left: 48vw;">
     <!-- Copyright -->
     <div class="container text-center">
       <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
