--- a/portfolio.html
+++ b/portfolio.html
@@ -118,14 +118,14 @@
     </div>
 
     <!-- Footer -->
-<div class="footer navbar-fixed-bottom bg-dark footer">
-        <!-- Copyright -->
-        <div class="container text-center">
-            <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
-        </div>
-        <!-- Copyright -->
-    </div>
-    <!-- Footer -->
+    <div class="navbar navbar-fixed-bottom bg-dark footer" style="position: fixed; bottom: 0; left: 48vw;">
+            <!-- Copyright -->
+            <div class="container text-center">
+              <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
+            </div>
+            <!-- Copyright -->
+          </div>
+        
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
