--- a/contact.html
+++ b/contact.html
@@ -67,14 +67,14 @@
         </div>
     </div>
 
-    <div class="footer navbar-fixed-bottom bg-dark footer">
+    <div class="navbar navbar-fixed-bottom bg-dark footer" style="position: fixed; bottom: 0; left: 48vw;">
             <!-- Copyright -->
             <div class="container text-center">
-                <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
+              <span class="Copyright" style="background-color:cornsilk;">Copyright ©</span>
             </div>
             <!-- Copyright -->
-        </div>
-
+          </div>
+        
 
 
 
