added item to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,10 @@
 
             <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/images/deadlink.jpg" class="card-img-top" alt="deadlink">
+                    <img src="assets/images/skiing.jpg" class="card-img-top" alt="link image to game">
                     <div class="card-body">
-                        <a href="#">
-                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Link Item 1</p>
+                        <a href="https://ivancho277.github.io/TriviaGame/">
+                            <p class="card-text" style="background-color:rgb(214, 207, 177);">Ski Trivia game!</p>
                         </a>
                     </div>
                 </div>
